<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- app string -->
    <string name="app_name">Find A Sale</string>
     <string name="add_offer">Add an Offer</string>
    <!-- Need Change with your -->
    	<!-- Admob -->
    		<string name="admob_id">ca-app-pub-5570266894283666/9413614042</string>
        	<string name="sender_id">575794190320</string>
        <!-- Facebook and Twitter configuration -->
			<string name="facebook_app_id">YOUR_FACEBOOK_APP_ID</string>
			<string name="twitter_consumer_key">YOUR_TWITTER_CONSUMER_KEY</string>
			<string name="twitter_secret_key">YOUR_TWITTER_SECRET_KEY</string>
			
		<!-- google play url -->	
			<string name="gplay_web_url">https://play.google.com/store/apps/details?id=com.shopsmart.shop</string>
			<string name="gplay_url">market://details?id=com.shopsmart.shop</string>
			
    	<!-- Copyright -->
    		<string name="copyright">&#169; findasale.in. All rights reserved.</string>
    
    <string name="page_about">About</string>
       <string name="gps_enabled">Enabled</string>
          <string name="gps_disabled">Disabled</string>
    
	<!-- Alert -->
    <string name="alert_notification">You have new location!!</string>
    
    <!-- tab -->
    <string name="tab_info">Info</string>
    <string name="tab_map">Map</string>
    
    <!-- hint -->
    <string name="hint_share">What do you think ?</string>
    <string name="loading_data">Loading data&#8230;</string>
    <string name="hint_search">Type Name</string>
    
    <!-- button -->
    <string name="btn_other_apps">Other Apps</string>
    <string name="btn_share">Share</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_load_more">Load More</string>
    <string name="btn_tell_friend">Tell a Friend</string>
    <string name="btn_rate_app">Rate App</string>
    
    <!-- label -->
    <string name="offerCategory">Category</string>
      <string name="newOffer">New Offer</string>
        <string name="offerTitle">Title</string>
            <string name="offerDescription">Description</string>
            <string name="offerStartDate">Start Date</string>
               <string name="offerEndDate">End Date</string>
               <string name="change_image" >Upload image</string>
                 <string name="saveOffer" >Save</string>
                 <string name="offerCategories">Categories</string>
    <string name="lbl_share_to">Share to:</string>
    <string name="lbl_no_result">No Result</string>
    <string name="menu_arround">Around You</string>
    <string name="menu_reroute">Reroute</string>
     <string name="loading">Loading</string>   
	<string-array name="menu_list">
        <item >Latest</item>
        <item >Category</item>
        <item >Search</item>
        <item >Setting</item>
        <item >About</item>
         <item >Add New</item>
    </string-array>
    
</resources>
