<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    			<LinearLayout  
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="vertical">
				  
			   <EditText
    	android:id="@+id/EditOfferTitle"
    	android:layout_height="wrap_content"
    	android:hint="@string/offerTitle"
    	android:inputType="text"
    	android:layout_marginLeft="@dimen/padding_detail_info"
						android:layout_marginTop="@dimen/padding_detail_info"
						style="@android:style/TextAppearance.Small"
						android:layout_marginRight="@dimen/padding_detail_info"
    	android:layout_width="fill_parent">
		</EditText>
		   <EditText
    	android:id="@+id/EditOfferDescription"
    	android:layout_height="wrap_content"
    	android:hint="@string/offerDescription"
    	android:inputType="textMultiLine"
    	 android:lines="5"
    	   android:gravity="top"
    	android:layout_width="fill_parent"
    	android:layout_marginLeft="@dimen/padding_detail_info"
						android:layout_marginTop="@dimen/padding_detail_info"
						style="@android:style/TextAppearance.Small"
						android:layout_marginRight="@dimen/padding_detail_info"
    	>
		</EditText>
		  <TextView
				        android:id="@+id/lblStartDate"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="@color/text_title"
						
						android:text="@string/offerStartDate"
						android:layout_marginLeft="@dimen/padding_detail_info"
						android:layout_marginTop="@dimen/padding_detail_info"

						android:layout_marginRight="@dimen/padding_detail_info"/>
		 <DatePicker 
        android:id="@+id/date_picker"
        android:calendarViewShown="false"
        android:scaleX=".8"
         android:scaleY=".8"
       	android:layout_marginLeft="@dimen/padding_detail_info"
		android:layout_marginTop="@dimen/padding_detail_info"
		android:layout_marginBottom="@dimen/padding_detail_info"
		style="@android:style/TextAppearance.Small"
		android:layout_marginRight="@dimen/padding_detail_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
      
        />

		 <TextView
				        android:id="@+id/lblEndDate"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="@color/text_title"
					
						android:text="@string/offerEndDate"
						android:layout_marginLeft="@dimen/padding_detail_info"
						android:layout_marginTop="@dimen/padding_detail_info"
						android:layout_marginRight="@dimen/padding_detail_info"/>
		 <DatePicker 
        android:id="@+id/enddate_picker"
        android:calendarViewShown="false"
         android:scaleX=".8"
         android:scaleY=".8"
       	android:layout_marginLeft="@dimen/padding_detail_info"
		android:layout_marginTop="@dimen/padding_detail_info"
		android:layout_marginBottom="@dimen/padding_detail_info"
		android:layout_marginRight="@dimen/padding_detail_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
		 	 <TextView
				        android:id="@+id/lblCategories"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="@color/text_title"
						
						android:text="@string/offerCategories"
						android:layout_marginLeft="@dimen/padding_detail_info"
						android:layout_marginTop="@dimen/padding_detail_info"
						android:layout_marginRight="@dimen/padding_detail_info"/>
		 	<Spinner
    android:id="@+id/spinnerCategory"
    android:layout_height="wrap_content"
    android:prompt="@string/offerCategory"
    android:layout_width="fill_parent" 
 android:layout_marginLeft="@dimen/padding_detail_info"
						android:layout_marginTop="@dimen/padding_detail_info"
						android:layout_marginRight="@dimen/padding_detail_info"
    >
  	 </Spinner>
		<ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:maxHeight="200dp"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/btn_pick"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/change_image" />
		
	
			
    <Button
    android:id="@+id/buttonSave"
    android:layout_height="wrap_content"
    android:text="@string/saveOffer"
 
    android:layout_width="fill_parent">
	</Button>
	    
	</LinearLayout>
			
</ScrollView>

	